--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -463,3 +463,5 @@
 "grin.teach.http.title" = "Transfer through Http Address Flow Graph";
 
 "grin.txid.title" = "Tx ID";
+
+"grin.switchAddress" = "Switch Address";
