--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -410,10 +410,10 @@
 "grin.tx.useVite" = "Use Vite Address";
 "grin.sent.useVite.desc" = "Sending GRIN through Vite Address is sharing transaction file encrypted by Vite through Vite Address, which ensures only the real recipient can decrypt the file. Please note that only the first Vite Address in your Vite Address Book can be used to send or receive GRIN.";
 "grin.sent.useHttp" = "Use Http Address";
-"grin.sent.useHttp.desc" = "Please note there would be transaction fees in both steps above, the first one is payed by the sender and the second one is payed by the recipient";
-"grin.sent.useFile" = "Use File";
+"grin.sent.useHttp.desc" = "Please note there would be transaction fees in both steps above, the first one is paid by the sender and the second one is paid by the recipient";
+"grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
-"grin.notSeeAgain" = "Don't show this again";
+"grin.notSeeAgain" = "Don't show me again";
 
 "grin.sent.title" = "Transfer by GRIN";
 "grin.sent.amount" = "Amount";
@@ -439,23 +439,23 @@
 "grin.sent.switch" = "Switch Mode";
 "grin.sent.stillUseHttp" = "Stay on Http Mode";
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
-"grin.sent.vite.success" = "Your transaction have sent, please be aware that you can go through your GRIN transaction only if you use current address.";
+"grin.sent.vite.success" = "Your transaction has sent, please be aware that you can go through your GRIN transaction only if you use current address.";
 
-"grin.receiveByVite.addressCopyed" = "Your Vite Address for receiving GRIN is copied to the clipboard.";
+"grin.receiveByVite.addressCopyed" = "Your Vite Address for receiving GRIN has been copied to the clipboard.";
 "grin.receiveByVite.desc" = "Please share your first Vite address to the sender. Please note that only when you are online with the first Vite address can you receive GRIN tokens.";
 "grin.iknow" = "I know";
 "grin.thisIsFirstViteAddress" = "This is the first Vite address in your Vite address book.";
 
-"grin.receiveByHttp.addressCopyed" = "Your Http Address for receiving GRIN is copied to the clipboard";
-"grin.receiveByHttp.desc" = "Please share the Http address on the bottom to the sender. Please note there would be transaction fees in both steps above(one is paid by the sender and the other one is paid by the recipient), and only when you are online with your first Vite address can you receive GRIN tokens.";
+"grin.receiveByHttp.addressCopyed" = "Your Http Address for receiving GRIN has been copied to the clipboard";
+"grin.receiveByHttp.desc" = "Please share the Http address at the bottom to the sender. Please note there would be transaction fees in both steps above(one is paid by the sender and the other one is paid by the recipient), and only when you are online with your first Vite address can you receive GRIN tokens.";
 
 "grin.receive.title" = "Receiving GRIN";
 "grin.receive.sented" = "Sent";
 "grin.creatTime" = "Creation Time";
-"grin.signAndShare" = "Signed and share file";
+"grin.signAndShare" = "Sign and Share Transaction File";
 
 "grin.sent.btnTitle" = "Sent";
-"grin.receive.BtnTitle" = "Receive";
+"grin.receive.BtnTitle" = "Received";
 
 "grin.notice.title" = "Notice";
 
