--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -466,3 +466,4 @@
 
 "grin.http.address" = "Http Address";
 "grin.vite.address" = "Vite Address";
+"grin.sendPageViteContactsButtonTitle" = "Grin Address";
