--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -394,6 +394,7 @@
 "grin.wallet.check.desc" = "Wallet check will scan the chain and cancel all pending transactions, unlock any locked outputs, restore any missing outputs, and ensure your wallet's content is consistent with the chain's version.";
 
 "grin.txType.sent" = "Sent";
+"grin.txType.waitToSign" = "待签收";
 "grin.txType.received" = "Received";
 "grin.txType.finalized" = "Finalized";
 "grin.txType.confirmed" = "Confirmed";
@@ -406,9 +407,9 @@
 
 "grin.useFirstViteAddress" = "To send GRIN through Vite Address or Http Address, please switch to the first Vite Address in your Vite Address Book";
 "grin.tx.useVite" = "Use Vite Address";
-"grin.sent.useVite.desc" = "Sending GRIN through Vite Address is sharing transaction file encrypted by Vite through Vite Address, which ensures only the real recipient can decrypt the file. Please note that only the first Vite Address in your Vite Address Book can be used to send or receive GRIN.";
+"grin.sent.useVite.desc" = "Sending GRIN through Vite Address is sharing transaction file encrypted by Vite through Vite Address, which ensures only the real recipient can decrypt the file. Please note that only the first Vite Address can be used to send or receive GRIN.";
 "grin.sent.useHttp" = "Use Http Address";
-"grin.sent.useHttp.desc" = "Please note there would be transaction fees in both steps above, the first one is paid by the sender and the second one is paid by the recipient";
+"grin.sent.useHttp.desc" = "通过Http地址转账GRIN，如图所示，Vite将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和Vite之间的交易状态；收款人的交易记录只记录Vite和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给Vite的交易已确认，并不代表收款人已经收到您的转账。";
 "grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
 "grin.notSeeAgain" = "Don't show me again";
@@ -418,7 +419,7 @@
 "grin.sent.fee" = "Transaction Fees";
 "grin.sent.creatFile" = "Generate Transaction File";
 
-"grin.shareFile.desc" = "Make sure to share the transaction file with the recipient and ask for a confirmation file.";
+"grin.shareFile.desc" = "请签收交易";
 "grin.txFile.init.status" = "Initializing";
 "grin.txFile.id" = "Transaction ID";
 "grin.shareFile" = "Share Transaction File";
@@ -433,19 +434,19 @@
 
 "grin.sent.next" = "Next";
 "grin.sent.suggest.useVite.title" = "Notice";
-"grin.sent.suggest.useVite.desc" = "If you want to send GRIN to a Vite Wallet user, sending through Vite Address is recommended as it is safer and cheaper.";
-"grin.sent.switch" = "Switch Mode";
-"grin.sent.stillUseHttp" = "Stay on Http Mode";
+"grin.sent.suggest.useVite.desc" = "若您想给Vite钱包用户转账GRIN，我们建议您使用Vite地址转账；因为通过Vite地址转账更安全，交易费更少";
+"grin.sent.switch" = "使用Vite地址转帐";
+"grin.sent.stillUseHttp" = "Stay on Http Address";
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
 "grin.sent.vite.success" = "Your transaction has sent, please be aware that you can go through your GRIN transaction only if you use current address.";
 
 "grin.receiveByVite.addressCopyed" = "Your Vite Address for receiving GRIN has been copied to the clipboard.";
-"grin.receiveByVite.desc" = "Please share your first Vite address to the sender. Please note that only when you are online with the first Vite address can you receive GRIN tokens.";
+"grin.receiveByVite.desc" = "使用Vite地址流程图转账”改成“使用Vite地址转账。 提示文案改成：请将您的第一个Vite地址（底部复制）分享给转账人，请注意收款人只有使用其第一个Vite地址才能收到GRIN";
 "grin.iknow" = "I know";
 "grin.thisIsFirstViteAddress" = "This is the first Vite address in your Vite address book.";
 
 "grin.receiveByHttp.addressCopyed" = "Your Http Address for receiving GRIN has been copied to the clipboard";
-"grin.receiveByHttp.desc" = "Please share the Http address at the bottom to the sender. Please note there would be transaction fees in both steps above(one is paid by the sender and the other one is paid by the recipient), and only when you are online with your first Vite address can you receive GRIN tokens.";
+"grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you. Please note there would be transaction fees in both steps above, the first one is paid by the sender and the second one is paid by the recipient. And only when you are using your first Vite address, can you receive GRIN.";
 
 "grin.receive.title" = "Receiving GRIN";
 "grin.receive.sented" = "Sent";
@@ -457,8 +458,8 @@
 
 "grin.notice.title" = "Notice";
 
-"grin.teach.vite.title" = "Transfer through Vite Address Flow Graph";
-"grin.teach.http.title" = "Transfer through Http Address Flow Graph";
+"grin.teach.vite.title" = "Transfer through Vite Address";
+"grin.teach.http.title" = "Transfer through Http Address";
 
 "grin.txid.title" = "Tx ID";
 
@@ -467,3 +468,7 @@
 "grin.http.address" = "Http Address";
 "grin.vite.address" = "Vite Address";
 "grin.sendPageViteContactsButtonTitle" = "Grin Address";
+
+
+"grin.canceled" = "已取消";
+
