--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -390,89 +390,75 @@
 "grin.balance.spendable" = "Spendable";
 "grin.balance.awaiting" = "Awaiting Confirmation";
 "grin.balance.locked" = "Locked by Previous Transaction";
-
 "grin.wallet.check" = "Check";
 "grin.wallet.check.desc" = "Wallet check will scan the chain and cancel all pending transactions, unlock any locked outputs, restore any missing outputs, and ensure your wallet's content is consistent with the chain's version.";
-
 "grin.txType.sent" = "Sent";
 "grin.txType.waitToSign" = "待签收";
-"grin.txType.waitToReceive" = "待敲定";
 "grin.txType.received" = "Received";
+"grin.txType.waitToFinalize" = "待敲定";
 "grin.txType.finalized" = "Finalized";
 "grin.txType.confirmed" = "Confirmed";
 "grin.txType.confirmedCoinbase" = "Confirmed Coinbase";
 "grin.txType.Canceled" = "Canceled";
-
 "grin.tx.Cancele" = "Canceled";
 "grin.tx.Repost" = "Repost";
 "grin.tx.copyId" = "Copy";
-
-"grin.useFirstViteAddress" = "To send GRIN through Vite Address or Http Address, please switch to the first Vite Address in your Vite Address Book";
-"grin.tx.useVite" = "Use Vite Address";
-"grin.sent.useVite.desc" = "Sending GRIN through Vite Address is sharing transaction file encrypted by Vite through Vite Address, which ensures only the real recipient can decrypt the file. Please note that only the first Vite Address can be used to send or receive GRIN.";
+"grin.useFirstViteAddress" = "To send GRIN through VITE Address or Http Address, please switch to the first VITE Address in your VITE Address Book";
+"grin.tx.useVite" = "Use VITE Address";
+"grin.sent.useVite.desc" = "Sending GRIN through VITE Address is sharing transaction file encrypted by Vite through VITE Address, which ensures only the real recipient can decrypt the file. Please note that only the first VITE Address can be used to send or receive GRIN.";
 "grin.sent.useHttp" = "Use Http Address";
-"grin.sent.useHttp.desc" = "通过Http地址转账GRIN，如图所示，Vite将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和Vite之间的交易状态；收款人的交易记录只记录Vite和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给Vite的交易已确认，并不代表收款人已经收到您的转账。";
+"grin.sent.useHttp.desc" = "通过Http地址转账GRIN，如图所示，VITE将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和VITE之间的交易状态；收款人的交易记录只记录VITE和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给VITE的交易已确认，并不代表收款人已经收到您的转账。\nThe transfer amount should be no less than 0.1 GRIN.";
 "grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
 "grin.notSeeAgain" = "Don't show me again";
-
 "grin.sent.title" = "Transfer by GRIN";
 "grin.sent.amount" = "Amount";
-"grin.sent.fee" = "Transaction Fees";
+"grin.sent.fee" = "Fees";
 "grin.sent.creatFile" = "Generate Transaction File";
-
 "grin.shareFile.desc" = "请签收交易";
-"grin.txFile.init.status" = "Initializing";
+"grin.txFile.init.status" = "Created";
 "grin.txFile.id" = "Transaction ID";
 "grin.shareFile" = "Share Transaction File";
-
 "grin.finalize.title" = "Confirm to Transfer";
 "grin.finalize.desc" = "收款人已经签收交易，请敲定并广播交易";
 "grin.txFile.received.status" = "Confirmed Receipt";
 "grin.finalize" = "敲定并广播";
-
 "grin.finalized.alertTitle" = "Transaction Finalized";
 "grin.finalized.alertDesc" = "您的GRIN转账交易已经开始广播";
-
 "grin.sent.next" = "Next";
 "grin.sent.suggest.useVite.title" = "Notice";
-"grin.sent.suggest.useVite.desc" = "若您想给Vite钱包用户转账GRIN，我们建议您使用Vite地址转账；因为通过Vite地址转账更安全，交易费更少";
-"grin.sent.switch" = "使用Vite地址转帐";
-"grin.sent.stillUseHttp" = "Stay on Http Address";
+"grin.sent.suggest.useVite.desc" = "If you want to send GRIN to a Vite Wallet user, sending through Vite Address is recommended for it is safer and cheaper.";
+"grin.sent.switch" = "Use VITE Address";
+"grin.sent.stillUseHttp" = "Use Http Address";
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
 "grin.sent.vite.success" = "Your transaction has sent, please be aware that you can go through your GRIN transaction only if you use current address.";
-
-"grin.receiveByVite.addressCopyed" = "Your Vite Address for receiving GRIN has been copied to the clipboard.";
-"grin.receiveByVite.desc" = "使用Vite地址流程图转账”改成“使用Vite地址转账。 提示文案改成：请将您的第一个Vite地址（底部复制）分享给转账人，请注意收款人只有使用其第一个Vite地址才能收到GRIN";
+"grin.receiveByVite.addressCopyed" = "Your VITE Address for receiving GRIN has been copied to the clipboard.";
+"grin.receiveByVite.desc" = "请将您的第一个VITE地址（底部复制）分享给转账人，请注意收款人只有使用其第一个VITE地址才能收到GRIN";
 "grin.iknow" = "I know";
-"grin.thisIsFirstViteAddress" = "This is the first Vite address in your Vite address book.";
-
+"grin.thisIsFirstViteAddress" = "This is the your first VITE address";
 "grin.receiveByHttp.addressCopyed" = "Your Http Address for receiving GRIN has been copied to the clipboard";
-"grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you. Please note there would be transaction fees in both steps above, the first one is paid by the sender and the second one is paid by the recipient. And only when you are using your first Vite address, can you receive GRIN.";
-
+"grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. Please note there would be transaction fees in both steps above, the first one is paid by the sender and the second one is paid by the recipient. And only when you are using your first VITE address, can you receive GRIN.";
 "grin.receive.title" = "Receiving GRIN";
 "grin.receive.sented" = "Sent";
 "grin.creatTime" = "Creation Time";
-"grin.signAndShare" = "Sign and Share Transaction File";
-
+"grin.signAndShare" = "Sign";
 "grin.sent.btnTitle" = "Sent";
 "grin.receive.BtnTitle" = "Receive";
-
 "grin.notice.title" = "Notice";
-
-"grin.teach.vite.title" = "Transfer through Vite Address";
-"grin.teach.http.title" = "Transfer through Http Address";
-
+"grin.teach.vite.title" = "Receive GRIN using VITE Addres";
+"grin.teach.http.title" = "通过Http地址收转GRIN";
 "grin.txid.title" = "Tx ID";
-
 "grin.switchAddress" = "Switch Address";
-
 "grin.http.address" = "Http Address";
 "grin.vite.address" = "VITE Address";
-"grin.sendPageViteContactsButtonTitle" = "Grin Address";
-
-
+"grin.sendPageViteContactsButtonTitle" = "GRIN Contact Address";
 "grin.canceled" = "已取消";
 "grin.makeSureToShare" = "请确保将交易文件分享给转账人";
-
-
+"grin.txbyfile.shareSentFileDesc" = "请确保将交易文件分享给收款人并要求返回一个确认收款文件";
+"grin.txbyfile.receiveSentFileDesc" = "请签收交易";
+"grin.txbyfile.shareReceiveFileDesc" = "请确保将交易文件分享给转账人";
+"grin.txbyfile.finalizeReceiveFileDesc" = "收款人已经签收交易，请敲定并广播交易";
+"grin.txbyfile.initStatus.sender" = "已创建";
+"grin.txbyfile.initStatus.receiver" = "待签收";
+"grin.txbyfile.receivedStatus.receiver" = "已签收";
+"grin.txbyfile.receivedStatus.sender" = "待敲定";
