--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -412,7 +412,7 @@
 "grin.tx.useVite" = "通过VITE地址";
 "grin.sent.useVite.desc" = "通过VITE地址发送GRIN即通过VITE地址分享经Vite加密的交易文件，这种方式可以确保只有真正的收款人可以解密文件。请注意只有您的第一个VITE地址可以用来进行GRIN转账和收款。";
 "grin.sent.useHttp" = "通过Http地址";
-"grin.sent.useHttp.desc" = "通过Http地址转账GRIN，如图所示，VITE将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和VITE之间的交易状态；收款人的交易记录只记录VITE和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给VITE的交易已确认，并不代表收款人已经收到您的转账。\n转账金额需大于等于0.1 GRIN。";
+"grin.sent.useHttp.desc" = "通过Http地址收转GRIN，如图所示，Vite将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和VITE之间的交易状态；收款人的交易记录只记录Vite和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给Vite的交易已确认，并不代表收款人已经收到您的转账。\n转账金额需大于等于0.1 GRIN。";
 "grin.sent.useFile" = "通过交易文件";
 "grin.know" = "我知道了";
 "grin.notSeeAgain" = "不再提示";
@@ -424,7 +424,7 @@
 "grin.txFile.init.status" = "创建";
 "grin.txFile.id" = "交易ID";
 "grin.shareFile" = "分享交易文件";
-"grin.finalize.title" = "确认转账";
+"grin.finalize.title" = "GRIN转账";
 "grin.finalize.desc" = "收款人已经签收交易，请敲定并广播交易";
 "grin.txFile.received.status" = "已确认收款";
 "grin.finalize" = "敲定并广播";
@@ -432,7 +432,7 @@
 "grin.finalized.alertDesc" = "您的GRIN转账交易已经开始广播";
 "grin.sent.next" = "下一步";
 "grin.sent.suggest.useVite.title" = "提示";
-"grin.sent.suggest.useVite.desc" = "若您想给VITE钱包用户转账GRIN，我们建议您使用VITE地址转账；因为通过VITE地址转账更安全，交易费更少";
+"grin.sent.suggest.useVite.desc" = "若您想给Vite钱包用户转账GRIN，我们建议您使用VITE地址转账；因为通过VITE地址转账更安全，交易费更少";
 "grin.sent.switch" = "使用VITE地址";
 "grin.sent.stillUseHttp" = "使用Http地址";
 "grin.sent.http.success" = "您的GRIN转账请求已成功发送。";
@@ -442,16 +442,18 @@
 "grin.iknow" = "我知道了";
 "grin.thisIsFirstViteAddress" = "这是您的第一个VITE地址。";
 "grin.receiveByHttp.addressCopyed" = "您的GRIN收款Http地址已复制至剪贴板";
-"grin.receiveByHttp.desc" = "通过Http地址转账GRIN，如上图所示，VITE将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。请注意，转账人的交易记录只记录转账人和VITE之间的交易状态；收款人的交易记录只记录VITE和收款人之间的交易状态。另外请注意只有当您使用您的第一个VITE地址时才能收到GRIN。";
+"grin.receiveByHttp.desc" = "通过Http地址收转GRIN，如上图所示，Vite将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。请注意，转账人的交易记录只记录转账人和Vite之间的交易状态；收款人的交易记录只记录Vite和收款人之间的交易状态。另外请注意只有当您使用您的第一个VITE地址时才能收到GRIN。";
 "grin.receive.title" = "GRIN收款";
 "grin.receive.sented" = "已传送";
 "grin.creatTime" = "生成时间";
-"grin.signAndShare" = "签收";
+"grin.signAndShare" = "签收并分享";
 "grin.sent.btnTitle" = "转账";
 "grin.receive.BtnTitle" = "收款";
 "grin.notice.title" = "提示";
-"grin.teach.vite.title" = "使用VITE地址接收GRIN";
-"grin.teach.http.title" = "通过Http地址收转GRIN";
+"grin.teach.vite.receive.title" = "使用VITE地址接收GRIN";
+"grin.teach.http.receive.title" = "使用Http地址接收GRIN";
+"grin.teach.vite.sent.title" = "使用VITE地址转账GRIN";
+"grin.teach.http.sent.title" = "通过Http地址转账GRIN";
 "grin.txid.title" = "交易ID";
 "grin.switchAddress" = "去切换地址";
 "grin.http.address" = "Http 地址";
