--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -407,7 +407,7 @@
 "grin.tx.useVite" = "Use VITE Address";
 "grin.sent.useVite.desc" = "Sending GRIN through VITE Address is sharing transaction file encrypted by Vite through VITE Address, which ensures only the real recipient can decrypt the file. Please note that only the first VITE Address can be used to send or receive GRIN.";
 "grin.sent.useHttp" = "Use Http Address";
-"grin.sent.useHttp.desc" = "通过Http地址转账GRIN，如图所示，VITE将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和VITE之间的交易状态；收款人的交易记录只记录VITE和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给VITE的交易已确认，并不代表收款人已经收到您的转账。\nThe transfer amount should be no less than 0.1 GRIN.";
+"grin.sent.useHttp.desc" = "通过Http地址收转GRIN，如图所示，Vite将为您代收代转。以上两次转账过程均会产生交易费，第一笔由转账人支付，第二笔由收款人支付。另外请注意，转账人的交易记录只记录转账人和Vite之间的交易状态；收款人的交易记录只记录Vite和收款人之间的交易状态。例如：转账人的“已确认”状态只表示转账人转给Vite的交易已确认，并不代表收款人已经收到您的转账。\nThe transfer amount should be no less than 0.1 GRIN.";
 "grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
 "grin.notSeeAgain" = "Don't show me again";
@@ -419,7 +419,7 @@
 "grin.txFile.init.status" = "Created";
 "grin.txFile.id" = "Transaction ID";
 "grin.shareFile" = "Share Transaction File";
-"grin.finalize.title" = "Confirm to Transfer";
+"grin.finalize.title" = "Transfer by GRIN";
 "grin.finalize.desc" = "收款人已经签收交易，请敲定并广播交易";
 "grin.txFile.received.status" = "Confirmed Receipt";
 "grin.finalize" = "敲定并广播";
@@ -441,12 +441,14 @@
 "grin.receive.title" = "Receiving GRIN";
 "grin.receive.sented" = "Sent";
 "grin.creatTime" = "Creation Time";
-"grin.signAndShare" = "Sign";
+"grin.signAndShare" = "Sign and share";
 "grin.sent.btnTitle" = "Sent";
 "grin.receive.BtnTitle" = "Receive";
 "grin.notice.title" = "Notice";
-"grin.teach.vite.title" = "Receive GRIN using VITE Addres";
-"grin.teach.http.title" = "通过Http地址收转GRIN";
+"grin.teach.vite.receive.title" = "使用VITE地址接收GRIN";
+"grin.teach.http.receive.title" = "使用Http地址接收GRIN";
+"grin.teach.vite.sent.title" = "使用VITE地址转账GRIN";
+"grin.teach.http.sent.title" = "通过Http地址转账GRIN";
 "grin.txid.title" = "Tx ID";
 "grin.switchAddress" = "Switch Address";
 "grin.http.address" = "Http Address";
