--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -415,13 +415,13 @@
 "grin.sent.amount" = "Amount";
 "grin.sent.fee" = "Fees";
 "grin.sent.creatFile" = "Generate Transaction File";
-"grin.shareFile.desc" = "Please sign the transaction";
+"grin.shareFile.desc" = "Please sign for the transaction";
 "grin.txFile.init.status" = "Created";
 "grin.txFile.id" = "Transaction ID";
 "grin.shareFile" = "Share Transaction File";
 "grin.finalize.title" = "Confirm to Transfer";
 "grin.finalize.desc" = "Transaction has been received by recipient. Please finalize and broadcast the transaction.";
-"grin.txFile.received.status" = "Confirmed Receipt";
+"grin.txFile.received.status" = "The receipt has been confirmed";
 "grin.finalize" = "Finalize and Broadcast";
 "grin.finalized.alertTitle" = "Transaction Finalized";
 "grin.finalized.alertDesc" = "Your GRIN transaction has started to be broadcast";
@@ -435,19 +435,19 @@
 "grin.receiveByVite.addressCopyed" = "Your VITE address for receiving GRIN has been copied to the clipboard.";
 "grin.receiveByVite.desc" = "Please share your first VITE address(Find it at the bottom) with the sender, please note that only when the recipient using his first VITE address can he receive GRIN.";
 "grin.iknow" = "I know";
-"grin.thisIsFirstViteAddress" = "This is the your first VITE address";
-"grin.receiveByHttp.addressCopyed" = "Your Http Address for receiving GRIN has been copied to the clipboard";
+"grin.thisIsFirstViteAddress" = "This is your first VITE address";
+"grin.receiveByHttp.addressCopyed" = "Your Http address for receiving GRIN has been copied to the clipboard";
 "grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. There are transaction fees in both the two steps above, the first one is paid by the sender and the second one is paid by the recipient. Please note that the transaction history in a sender's wallet only includes the transactions between the sender and Vite; And that of a recipient only includes the transactions between Vite and the recipient. And only when you use your first VITE address can you receive GRIN.";
 "grin.receive.title" = "Receive GRIN";
 "grin.receive.sented" = "Sent";
 "grin.creatTime" = "Creation Time";
-"grin.signAndShare" = "Sign";
+"grin.signAndShare" = "Receive and Share";
 "grin.sent.btnTitle" = "Transfer";
 "grin.receive.BtnTitle" = "Receive";
 "grin.notice.title" = "Notice";
 "grin.teach.vite.title" = "Receive GRIN through VITE Address";
 "grin.teach.http.title" = "Receive GRIN though Http Address";
-"grin.txid.title" = "Tx ID";
+"grin.txid.title" = "Transaction ID";
 "grin.switchAddress" = "Switch Address";
 "grin.http.address" = "Http Address";
 "grin.vite.address" = "VITE Address";
@@ -455,7 +455,7 @@
 "grin.canceled" = "Cancelled";
 "grin.makeSureToShare" = "Plese make sure to share the transaction file with sender";
 "grin.txbyfile.shareSentFileDesc" = "Please make sure to share the transaction file with the recipient and ask for a confirmation file.";
-"grin.txbyfile.receiveSentFileDesc" = "Please sign the transaction";
+"grin.txbyfile.receiveSentFileDesc" = "Please sign for the transaction";
 "grin.txbyfile.shareReceiveFileDesc" = "Plese make sure to share the transaction file with sender";
 "grin.txbyfile.finalizeReceiveFileDesc" = "Transaction has been received by recipient. Please finalize and broadcast the transaction.";
 "grin.txbyfile.initStatus.sender" = "Created";
