--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -469,6 +469,7 @@
 "grin.txbyfile.initStatus.receiver" = "待签收";
 "grin.txbyfile.receivedStatus.receiver" = "已签收";
 "grin.txbyfile.receivedStatus.sender" = "待敲定";
-
+"grin.creat.syncronizing" = "账户创建、同步Grin数据中，预计3分钟";
+"grin.recover.syncronizing" = "账户恢复、同步Grin数据中，预计3分钟";
 
 
