--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -399,13 +399,13 @@
 "grin.txType.finalized" = "Finalized";
 "grin.txType.confirmed" = "Confirmed";
 "grin.txType.confirmedCoinbase" = "Confirmed Coinbase";
-"grin.txType.Canceled" = "Cancelled";
-"grin.tx.Cancele" = "Cancelled";
+"grin.txType.Canceled" = "Canceled";
+"grin.tx.Cancele" = "Canceled";
 "grin.tx.Repost" = "Repost";
 "grin.tx.copyId" = "Copy";
 "grin.useFirstViteAddress" = "To transfer GRIN through VITE Address or Http Address, please switch to the first VITE Address in your VITE Address Book";
 "grin.tx.useVite" = "Use VITE Address";
-"grin.sent.useVite.desc" = "Transfer GRIN through VITE Address is sharing transaction file encrypted by Vite through VITE Address, which ensures only the real recipient can decrypt the file. Please note that only the first VITE Address can be used to send or receive GRIN.";
+"grin.sent.useVite.desc" = "Transfer GRIN through VITE address is sharing transaction file encrypted by Vite through VITE address, which ensures only the real recipient can decrypt the file. Please note that only the first VITE address can be used to transfer or receive GRIN.";
 "grin.sent.useHttp" = "Use Http Address";
 "grin.sent.useHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. There are transaction fees in both the two steps above, the first one is paid by the sender and the second one is paid by the recipient. And please note that the transaction history in a sender's wallet only includes the transactions between the sender and Vite; And that of a recipient only includes the transactions between Vite and the recipient. For instance, a \"Confirmed\" state of the transaction in a sender's wallet only indicates the transaction from the sender to Vite is confirmed, doesn't mean the recipient has received GRIN.\nThe transfer amount should be no less than 0.1 GRIN.";
 "grin.sent.useFile" = "Use Transaction File";
@@ -419,8 +419,8 @@
 "grin.txFile.init.status" = "Created";
 "grin.txFile.id" = "Transaction ID";
 "grin.shareFile" = "Share Transaction File";
-"grin.finalize.title" = "Confirm to Transfer";
-"grin.finalize.desc" = "Transaction has been received by recipient. Please finalize and broadcast the transaction.";
+"grin.finalize.title" = "GRIN Transfer";
+"grin.finalize.desc" = "Transaction has been received by the recipient. Please finalize and broadcast the transaction.";
 "grin.txFile.received.status" = "The receipt has been confirmed";
 "grin.finalize" = "Finalize and Broadcast";
 "grin.finalized.alertTitle" = "Transaction Finalized";
@@ -428,8 +428,8 @@
 "grin.sent.next" = "Next";
 "grin.sent.suggest.useVite.title" = "Notice";
 "grin.sent.suggest.useVite.desc" = "If you want to send GRIN to a Vite Wallet user, sending through Vite Address is recommended for it is safer and cheaper.";
-"grin.sent.switch" = "Transfer GRIN through VITE Address";
-"grin.sent.stillUseHttp" = "Transfer GRIN through Http Address";
+"grin.sent.switch" = "VITE Address";
+"grin.sent.stillUseHttp" = "Http Address";
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
 "grin.sent.vite.success" = "Your transaction has sent, please be aware that you can go through your GRIN transaction only if you use current address.";
 "grin.receiveByVite.addressCopyed" = "Your VITE address for receiving GRIN has been copied to the clipboard.";
@@ -438,7 +438,7 @@
 "grin.thisIsFirstViteAddress" = "This is your first VITE address";
 "grin.receiveByHttp.addressCopyed" = "Your Http address for receiving GRIN has been copied to the clipboard";
 "grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. There are transaction fees in both the two steps above, the first one is paid by the sender and the second one is paid by the recipient. Please note that the transaction history in a sender's wallet only includes the transactions between the sender and Vite; And that of a recipient only includes the transactions between Vite and the recipient. And only when you use your first VITE address can you receive GRIN.";
-"grin.receive.title" = "Receive GRIN";
+"grin.receive.title" = "GRIN Transfer";
 "grin.receive.sented" = "Sent";
 "grin.creatTime" = "Creation Time";
 "grin.signAndShare" = "Receive and Share";
@@ -454,16 +454,16 @@
 "grin.http.address" = "Http Address";
 "grin.vite.address" = "VITE Address";
 "grin.sendPageViteContactsButtonTitle" = "GRIN Contact Address";
-"grin.canceled" = "Cancelled";
+"grin.canceled" = "Canceled";
 "grin.makeSureToShare" = "Plese make sure to share the transaction file with sender";
 "grin.txbyfile.shareSentFileDesc" = "Please make sure to share the transaction file with the recipient and ask for a confirmation file.";
 "grin.txbyfile.receiveSentFileDesc" = "Please sign for the transaction";
 "grin.txbyfile.shareReceiveFileDesc" = "Plese make sure to share the transaction file with sender";
-"grin.txbyfile.finalizeReceiveFileDesc" = "Transaction has been received by recipient. Please finalize and broadcast the transaction.";
+"grin.txbyfile.finalizeReceiveFileDesc" = "Transaction has been received by the recipient. Please finalize and broadcast the transaction.";
 "grin.txbyfile.initStatus.sender" = "Created";
-"grin.txbyfile.initStatus.receiver" = "Unreceived";
+"grin.txbyfile.initStatus.receiver" = "Awaiting Receiving";
 "grin.txbyfile.receivedStatus.receiver" = "Received";
-"grin.txbyfile.receivedStatus.sender" = "Awaiting Finalize";
+"grin.txbyfile.receivedStatus.sender" = "Awaiting Finalization";
 
 "grin.creat.syncronizing" = "Creat and sync, 3 mins estimated";
 "grin.recover.syncronizing" = "Recover and sync, 3 mins estimated";
